# gatelogue

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  data-ns.db  data.json  data_no_sources.json  extractors  gatelogue-client-65fadad1c43d988f.js  gatelogue-client-65fadad1c43d988f_bg.wasm  gatelogue-client-a7bb32c03f9a22e.js  gatelogue-client-a7bb32c03f9a22e_bg.wasm  gatelogue-client-e03e3a073a53d3ee.js  gatelogue-client-e03e3a073a53d3ee_bg.wasm  gatelogue-client-f5204e448ed56d7.js  gatelogue-client-f5204e448ed56d7_bg.wasm  graph.msgpack  index.html  remove_sources.py  schema.json  update.sh
.config/: hk.pkl  mise.gha.toml  mise.lint.toml  mise.py.toml  (+4 more)
gatelogue-aggregator/: README.md  pylock.docs.toml  pylock.hatch-build.toml  pylock.hatch-check-code.toml  pylock.hatch-check-fmt.toml  pylock.hatch-check-types.toml  pylock.hatch-static-analysis.toml  pylock.hatch-test-py3-13.toml  pylock.hatch-test-py3-14.toml  pylock.toml  pylock.types.toml  pyproject.toml
gatelogue-aggregator/docs/: cli.rst  conf.py  data_format.rst  index.rst  reference.rst  usage.rst
gatelogue-aggregator/docs/_templates/: custom-class-template.rst
gatelogue-aggregator/requirements/: default.txt  docs.txt  types.txt
gatelogue-aggregator/src/gatelogue_aggregator/: __about__.py  __main__.py  config.py  downloader.py  gatelogue_data.py  logging.py  report.py  source.py  utils.py
gatelogue-aggregator/src/gatelogue_aggregator/cli/: __init__.py
gatelogue-aggregator/src/gatelogue_aggregator/sources/: __init__.py  dynmap_airports.py  dynmap_markers.py  line_builder.py  mrt_transit.py  spawn_warp.py  town.py  warp_api.py  wiki_airline.py  wiki_airport.py  wiki_base.py  yaml2source.py
gatelogue-aggregator/src/gatelogue_aggregator/sources/air/: __init__.py  aircraft.yaml  dynmap_airports.py  hardcode.py  mrt_transit.py  wiki_airline.py  wiki_airport.py
gatelogue-aggregator/src/gatelogue_aggregator/sources/bus/: __init__.py  ccc.py  intrabus.py  intrabus_warp.py  midwestern.py  midwestern.yaml  omegabus.py  seabeast_buses.py
gatelogue-aggregator/src/gatelogue_aggregator/sources/rail/: __init__.py  _intrarail_local_old.py  _nsc_old.py  blurail.py  blurail_warp.py  breezerail.py  breezerail_warp.py  cvc_express.py  cvc_express.yaml  cvc_express_coord.py  dynmap_mrt.py  erzlink_intercity.py  erzlink_intercity.yaml  fredrail.py  fredrail.yaml  fredrail_warp.py  intrarail.py  intrarail_local.py  intrarail_mcr_warp.py  intrarail_warp.py  lava_rail.py  lava_rail.yaml  marblerail.py  marblerail.yaml  marblerail_coord.py  marblerail_warp.py  mrt.py  nflr.py  nflr_warp.py  nrn.py  nrn.yaml  nsc.py  nsc.yaml  nsc_warp.py  pacifica.py  pacifica.yaml  pacifica_coord.py  railinq.py  railinq.yaml  railinq_warp.py  (+11 more)
gatelogue-aggregator/src/gatelogue_aggregator/sources/sea/: __init__.py  aqualinq.py  aqualinq_warp.py  cfc.py  hbl.py  hbl_warp.py  intrasail.py  intrasail_warp.py  wzf.py  wzf_warp.py
gatelogue-aggregator/src/gatelogue_aggregator/sources/wiki_extractors/: airline.py  airport.py
gatelogue-aggregator/src/gatelogue_aggregator/types/: _air.py  air.py  base.py  config.py  connections.py  context.py  gatelogue_data.py  line_builder.py  mergeable.py  plane.py  proximity.py  rail.py  sea.py  source.py  sourced.py
gatelogue-aggregator/src/gatelogue_aggregator/types/context/: context.py  proximity.py  shared_facility.py
gatelogue-aggregator/src/gatelogue_aggregator/types/edge/: line_builder.py  proximity.py  shared_facilities.yaml  shared_facility.py
gatelogue-aggregator/src/gatelogue_aggregator/types/node/: air.py  base.py  bus.py  rail.py  sea.py  spawn_warp.py  town.py
gatelogue-aggregator/tests/: __init__.py
gatelogue-client/: .prettierignore  Cargo.toml  README.md  env.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
gatelogue-client/src/: App.vue  airport_selector.rs  colors.css  colors.ts  consts.rs  gate_viewer.rs  lib.rs  main.rs  main.ts
gatelogue-client/src/components/: AirlineLink.vue  GateLink.vue  Sidebar.vue  Sourced.vue
gatelogue-client/src/router/: index.ts
gatelogue-client/src/stores/: data.ts  schema.ts
gatelogue-client/src/views/: Airline.vue  Airport.vue  Flight.vue  Gate.vue  Home.vue  Loading.vue
gatelogue-client/src/views/airline/: Flight.vue
gatelogue-client/src/views/airport/: Flight.vue  Gate.vue
gatelogue-common/: Cargo.toml
gatelogue-common/src/: lib.rs  types.rs
gatelogue-data-updater/: Cargo.toml
gatelogue-data-updater/src/: main.rs  utils.rs
gatelogue-data-updater/src/airlines/: astrella.rs  extractors.rs  mod.rs
gatelogue-data-updater/src/airports/: extractors.rs  mod.rs  pce.rs
gatelogue-server/: Cargo.toml
gatelogue-server/src/: get_graph.rs  main.rs
gatelogue-types-py/: pylock.docs.toml  pylock.hatch-build.toml  pylock.hatch-check-code.toml  pylock.hatch-check-fmt.toml  pylock.hatch-check-types.toml  pylock.hatch-static-analysis.toml  pylock.hatch-test-py3-13.toml  pylock.hatch-test-py3-14.toml  pylock.toml  pylock.types.toml  pyproject.toml
gatelogue-types-py/requirements/: default.txt  docs.txt  types.txt
gatelogue-types-py/src/gatelogue_types/: __about__.py  __init__.py  _util.py  air.py  base.py  bus.py  create.sql  node.py  rail.py  sea.py  spawn_warp.py  town.py
gatelogue-types-py/src/gatelogue_types/sql/: create.sql
gatelogue-types-py/tests/: __init__.py
gatelogue-types-rs/: Cargo.toml
gatelogue-types-rs/src/: air.rs  bus.rs  error.rs  lib.rs  located_node.rs  node.rs  rail.rs  sea.rs  spawn_warp.rs  town.rs  util.rs
gatelogue-types-rs/src/node/: air.rs  bus.rs  located.rs  mod.rs  rail.rs  sea.rs  spawn_warp.rs  town.rs
gatelogue-types-rs/src/sql/: create.sql  drop_sources.sql
gatelogue-types-rs/src/sql/air/: airline_gates.sql  gate_flights_to_here.sql
gatelogue-types-rs/src/sql/bus/: line_stops.sql  stop_berths.sql
gatelogue-types-rs/src/sql/rail/: platform_connections_from_here.sql  station_lines.sql
gatelogue-types-rs/src/sql/sea/: dock_connections_to_here.sql  stop_connections_from_here.sql
(+1753 files in other folders)
