[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatelogue-aggregator"
dynamic = ["version"]
description = ''
#readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "7d", email = "61975820+iiiii7d@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  # "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "msgspec",
  "pandas",
  "rich",
  "requests",
  "BeautifulSoup4",
  "networkx",
  "types-networkx",
  "pygraphviz",
]

[project.urls]
Documentation = "https://github.com/mrt-map/gatelogue#readme"
Issues = "https://github.com/mrt-map/gatelogue/issues"
Source = "https://github.com/mrt-map/gatelogue"

[project.scripts]
gatelogue-aggregator = "gatelogue_aggregator.cli:gatelogue_aggregator"

[tool.hatch.version]
path = "src/gatelogue_aggregator/__about__.py"

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx",
  "sphinxcontrib-programoutput",
  "sphinx-codeautolink"
]
[tool.hatch.envs.docs.scripts]
build = "make html"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gatelogue_aggregator tests}"

[tool.coverage.run]
source_pkgs = ["gatelogue_aggregator", "tests"]
branch = true
parallel = true
omit = [
  "src/gatelogue_aggregator/__about__.py",
]

[tool.coverage.paths]
gatelogue_aggregator = ["src/gatelogue_aggregator", "*/gatelogue-aggregator/src/gatelogue_aggregator"]
tests = ["tests", "*/gatelogue-aggregator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
