[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatelogue-aggregator"
dynamic = ["version"]
description = ''
readme = "../README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
keywords = ["gatelogue", "mrt", "minecart rapid transit"]
authors = [
  { name = "MRT Mapping Services" },
  { name = "7d", email = "61975820+iiiii7d@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  # "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Games/Entertainment",
  "Typing :: Typed",
  "Private :: Do Not Upload",
]
dependencies = [
  "gatelogue-types @ {root:parent:uri}/gatelogue-types-py",
  "click",
  "msgspec",
  "pandas",
  "rich",
  "cloudscraper",
  "BeautifulSoup4",
  "rustworkx",
  "pydot",
  "pillow",
  "pyyaml"
]

[project.urls]
Documentation = "https://mrt-map.github.io/gatelogue/docs"
Issues = "https://github.com/mrt-map/gatelogue/issues"
Source = "https://github.com/mrt-map/gatelogue"
Changelog = "https://github.com/MRT-Map/gatelogue/blob/main/CHANGELOG.md"
Homepage = "https://mrt-map.github.io/gatelogue"

[project.scripts]
gatelogue-aggregator = "gatelogue_aggregator.cli:gatelogue_aggregator"

[tool.hatch.version]
path = "src/gatelogue_aggregator/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

#[tool.hatch.envs.default]
#python = "3.12"

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx",
  "sphinxcontrib-programoutput",
  "sphinx-codeautolink",
  "sphinx_rtd_theme",
]
[tool.hatch.envs.docs.scripts]
build = """
  cd docs
  cp _templates/custom-class-template-temp.rst _templates/custom-class-template.rst
  make html
  cp _templates/custom-class-template-actual.rst _templates/custom-class-template.rst
  make html
  rm _templates/custom-class-template.rst
  cd ..
"""

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gatelogue_aggregator tests}"

[tool.coverage.run]
source_pkgs = ["gatelogue_aggregator", "tests"]
branch = true
parallel = true
omit = [
  "src/gatelogue_aggregator/__about__.py",
]

[tool.coverage.paths]
gatelogue_aggregator = ["src/gatelogue_aggregator", "*/gatelogue-aggregator/src/gatelogue_aggregator"]
tests = ["tests", "*/gatelogue-aggregator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
