[package]
name = "gatelogue-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../gatelogue-common", package = "gatelogue-common" }
seed = "0.9.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']