[package]
name = "gatelogue-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../gatelogue-common", package = "gatelogue-common" }
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew_integration"] }
once_cell = "1.17.1"
rmp-serde = "1.1.1"
itertools = "0.10.5"
alphanumeric-sort = "1.5.1"
petgraph = "0.6.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
