[package]
name = "gatelogue-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
smol_str = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
petgraph = { version = "0.6.3", features = ["serde-1"] }
