[package]
name = "gatelogue-data-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../gatelogue-common", package = "gatelogue-common" }

tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.17", features = ["json"] }
rmp-serde = "1.1.1"
color-eyre = "0.6.2"
regex = "1.8.1"
mediawiki = "0.2.10"
petgraph = "0.6.3"
indicatif = "0.17.3"
