[package]
name = "gatelogue-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../gatelogue-common", package = "gatelogue-common" }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
cached = "0.41.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"