[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gatelogue-types"
dynamic = ["version"]
description = "Types for loading and reading Gatelogue data"
readme = "../README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
keywords = ["gatelogue", "mrt", "minecart rapid transit"]
authors = [
  { name = "MRT Mapping Services" },
  { name = "7d", email = "61975820+iiiii7d@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: SQL",
  # "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Games/Entertainment",
  "Typing :: Typed",
]
dependencies = [
]
[project.optional-dependencies]
dev = [
  "requests==2.33.1",
  "niquests==3.18.7",
  "httpx==0.28.1",
  "urllib3==2.6.3",
  "aiohttp==3.13.5",
  "rnet==3.0.0rc22",
]

[project.urls]
Documentation = "https://mrt-map.github.io/gatelogue/docs"
Issues = "https://github.com/mrt-map/gatelogue/issues"
Source = "https://github.com/mrt-map/gatelogue"
Changelog = "https://github.com/MRT-Map/gatelogue/blob/main/CHANGELOG.md"
Homepage = "https://mrt-map.github.io/gatelogue"

[tool.hatch.version]
path = "src/gatelogue_types/__about__.py"

[tool.hatch.env]
requires = [
  "hatch-pip-compile==1.11.6"
]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-hashes = true
pip-compile-constraint = "default"
pip-compile-resolver = "uv"
pip-compile-installer = "uv"
pip-compile-args = ["--exclude-newer", "3 days"]
lock-filename = "requirements/{env_name}.txt"

features = ["dev"]
#python = "3.12"

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx==9.1.0", 
  "sphinx-codeautolink==0.18.0", 
  "sphinx_rtd_theme==3.1.0", 
]
[tool.hatch.envs.docs.scripts]
build = "cd docs; make html; cd .."

[tool.hatch.envs.types]
features = ["dev"]
extra-dependencies = [
    "pyrefly==0.63.0",
]
[tool.hatch.envs.types.scripts]
check = "pyrefly check {args}"

[tool.coverage.run]
source_pkgs = ["gatelogue_types", "tests"]
branch = true
parallel = true
omit = [
  "src/gatelogue_types/__about__.py",
]

[tool.coverage.paths]
gatelogue_types = ["src/gatelogue_types", "*/gatelogue-types/src/gatelogue_types"]
tests = ["tests", "*/gatelogue-types/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.hatch-test]
features = ["dev"]
default-args = ["tests/__init__.py"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.13"]

[tool.ruff.lint]
ignore = [
  "C408",  # dict(a=b)
  "T201",  # print
  "S101",  # assert
  "S608",  # SQL injection lol
]

