[package]
name = "gatelogue-types"
version = "2.0.0-b6+6"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-as-inner = "0.6.1"

reqwest = { version = "0.12.12", optional = true }
surf = { version = "2.3", optional = true }
ureq = { version = "2.12", optional = true }

[features]
all_get = ["reqwest_get", "surf_get", "ureq_get"]
reqwest_get = ["dep:reqwest"]
surf_get = ["dep:surf"]
ureq_get = ["dep:ureq"]
