[package]
name = "gatelogue-types"
version = "2.0.5+10"
edition = "2021"
description = "Types for loading and reading Gatelogue data"
license = "GPL-3.0-only"
readme = "../README.md"
homepage = "https://mrt-map.github.io/gatelogue"
repository = "https://github.com/mrt-map/gatelogue"
documentation = "https://mrt-map.github.io/gatelogue/docs/rs"
keywords = ["gatelogue", "mrt"]
categories = ["games"]
authors = ["MRT Mapping Services", "7d <61975820+iiiii7d@users.noreply.github.com>"]
rust-version = "1.68"




[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum-as-inner = "0.6.1"
thiserror = "2.0"

reqwest = { version = "0.12.24", optional = true }
surf = { version = "2.3", optional = true }
ureq = { version = "3.1", optional = true }
duplicate = "2.0"

[features]
all_get = ["reqwest_get", "surf_get", "ureq_get"]
reqwest_get = ["dep:reqwest"]
surf_get = ["dep:surf"]
ureq_get = ["dep:ureq"]

[lints.rust]
future-incompatible = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"

missing_errors_doc = { level="allow", priority = 1 }
missing_panics_doc = { level="allow", priority = 1 }
cast_precision_loss = { level="allow", priority = 1 }
cast_possible_truncation = { level="allow", priority = 1 }
module_name_repetitions = { level="allow", priority = 1 }
multiple_crate_versions = { level="allow", priority = 1 }
used_underscore_binding = { level="allow", priority = 1 }
pub_underscore_fields = { level="allow", priority = 1 }

allow_attributes = "warn"
#arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
#infinite_loop = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
#missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
# partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
